Add justifications for all custom script tags

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -346,11 +346,11 @@ Custom template for same-page post-AJAX submit share ask.
 </div>
 
 {% if page.custom_fields.after_action_next_step == "flow" %}
-<script type="text/javascript">
+<script type="text/javascript" justification="initialize AK form">
 	actionkit.forms.contextRoot = '/context/';
 	actionkit.forms.initForm('act-donate');
 </script>
-<script type="text/javascript" src="https://dbqvwi2zcv14h.cloudfront.net/ak/afteraction-flow-shared.js"></script>
+<script type="text/javascript" justification="custom UI" src="https://dbqvwi2zcv14h.cloudfront.net/ak/afteraction-flow-shared.js"></script>
 {% endif %}
 <script>
 jQuery(document).ready(function($){
