--- a/event_attend.html
+++ b/event_attend.html
@@ -193,7 +193,7 @@
 <div id="event-attend-rsvp" class="section width-normal padding-none margin-bottom-large">
 	<div class="section-inner event-signup bg-white padding-medium">
 		<a id="rsvp" name="rsvp"></a>
-		<script type="text/javascript">
+		<script type="text/javascript" justification="init AK event search">
 			var have_events = $('#id_have_events').val();
 			if ( !have_events ) {
 				var args = actionkit.utils.getArgs();
