--- a/event_attendee_tools.html
+++ b/event_attendee_tools.html
@@ -232,7 +232,7 @@
 
 {% block below_form %}
 
-<script type="text/javascript">
+<script type="text/javascript" justification="init AK form">
 actionkit.forms.contextRoot = '/context/';
 actionkit.forms.initTafForm('taf');
 </script>
