--- a/event_created.html
+++ b/event_created.html
@@ -15,7 +15,7 @@
 	</div>
 </div>
 
-<script type="text/javascript">
+<script type="text/javascript" justification="send iFrame event">
 	jQuery(window).load(function() {
 		if ('parentIFrame' in window) {
       parentIFrame.sendMessage("event_created");
