--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@ input, select, textarea{max-width: initial;}
 		</div>
 	</div>
 </section>		
-<script type="text/javascript">
+<script type="text/javascript" justification="AK form overlay">
 $(document).ready(function(){
 actionkit.forms.installOverlayLabelHandler();
 });
