--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 {% load actionkit_tags %}
 {% block content %}
 
-<script type="text/javascript">
+<script type="text/javascript" justification="oneclick functionality">
 	function urlParam(name){
 		var results = new RegExp('[\\?&]' + name + '=([^&#]*)').exec(window.location.href);
 		if (!results) { return 0; }
@@ -81,7 +81,7 @@
 			<ul style="display:none;" id="ak-errors"><li></li></ul>
 		</form>
 
-<script type="text/javascript">
+<script type="text/javascript" justification="one click functionality">
 jQuery( document ).ready(function() {
 	function urlParam(name){
 		var results = new RegExp('[\\?&]' + name + '=([^&#]*)').exec(window.location.href);
