--- a/site_404.html
+++ b/site_404.html
@@ -2,15 +2,15 @@
 <head>
 <title>Page not found - 350.org</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script type="text/javascript">
+  <script type="text/javascript" justification="start time">
   window.startTime = (new Date()).getTime();
   </script>
 <link rel="icon" type="image/png" href="https://s3.amazonaws.com/s3.350.org/images/favicon.png" />
-<script type="text/javascript" src="https://use.typekit.com/mnx5rpz.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="https://s3.amazonaws.com/s3.350.org/images/scripts-2012.js"></script>
-<script type="text/javascript">
+<script type="text/javascript" justification="fonts" src="https://use.typekit.com/mnx5rpz.js"></script>
+<script type="text/javascript" justification="Typekit init">try{Typekit.load();}catch(e){}</script>
+<script type="text/javascript" justification="JQuery library" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" justification="JQuery label plugin" src="https://s3.amazonaws.com/s3.350.org/images/scripts-2012.js"></script>
+<script type="text/javascript" justification="WebFont configuration">
     WebFontConfig = {
     google: { families: [ 'Permanent+Marker::latin' ] },
     active: function(){
