--- a/survey.html
+++ b/survey.html
@@ -55,7 +55,7 @@
 		</form>
 {% endif %}
 	</div>
-	<script type="text/javascript">
+	<script type="text/javascript" justification="custom functionality">
 		jQuery( document ).ready(function() {
 				radiobtn = document.getElementById("{{ args.action_smiley }}");
 				if (radiobtn){
