--- a/thanks.html
+++ b/thanks.html
@@ -198,7 +198,7 @@
 	</script>
 
 {% if page.custom_fields.after_action_next_step == "flow" %}
-	<script type="text/javascript" src="https://dbqvwi2zcv14h.cloudfront.net/ak/afteraction-flow-shared.js"></script>
+	<script type="text/javascript" justification="custom UI" src="https://dbqvwi2zcv14h.cloudfront.net/ak/afteraction-flow-shared.js"></script>
 	{% if action.custom_fields.original_bgimage %}
 	<style>
 	#body-mobile-background {
