--- a/user_form.html
+++ b/user_form.html
@@ -121,5 +121,5 @@
 {% endif %}
 
 {% if templateset.custom_fields.site_addl_js_url %}
-	<script type="text/javascript" src="{{ templateset.custom_fields.site_addl_js_url }}"></script>
+	<script type="text/javascript" justification="Init additional JS" src="{{ templateset.custom_fields.site_addl_js_url }}"></script>
 {% endif %}
