--- a/donate.html
+++ b/donate.html
@@ -969,7 +969,7 @@
 
 {% if page.custom_fields.donate_enable_countdown and page.custom_fields.donate_countdown_date %}
 <!-- Add JS for countdown if enabled -->
-<script type="text/javascript">
+<script type="text/javascript" justification="script for countdown">
   /*!
   * The Final Countdown for jQuery v2.1.0 (http://hilios.github.io/jQuery.countdown/)
   * Copyright (c) 2015 Edson Hilios
@@ -1004,7 +1004,7 @@
 </script>
 {% endif %}
 
-<script type="text/javascript" src="https://dbqvwi2zcv14h.cloudfront.net/ak/donate.js"></script>
+<script type="text/javascript" justification="custom ui" src="https://dbqvwi2zcv14h.cloudfront.net/ak/donate.js"></script>
 
 <script language="javascript">
 
