--- a/password.html
+++ b/password.html
@@ -35,7 +35,7 @@
 	      </div>
 	    </form>
 		</div>
-		    <script type="text/javascript">
+		    <script type="text/javascript" justification="AK form overlay">
 		$(document).ready(function(){
 		actionkit.forms.installOverlayLabelHandler();
 		});
