Add justifications for Usercentrics + dynamically inserted scripts

--- a/350_cookie_banner.html
+++ b/350_cookie_banner.html
@@ -7,7 +7,7 @@
 <link rel="preload" href="//privacy-proxy.usercentrics.eu/latest/uc-block.bundle.js" as="script">
 <script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="AcMHYQUX2Y80Au" async></script>
 <script type="application/javascript" src="https://privacy-proxy.usercentrics.eu/latest/uc-block.bundle.js"></script>
-<script>
+<script justification="Add Usercentrics script">
 // reload page on opt-in
 uc.reloadOnOptIn( [
   'BJz7qNsdj-7', // YouTube
