--- a/350_cookie_banner.html
+++ b/350_cookie_banner.html
@@ -5,8 +5,8 @@
 <link rel="preconnect" href="//privacy-proxy.usercentrics.eu">
 <link rel="preload" nonce="{{nonce}}" href="//app.usercentrics.eu/browser-ui/latest/loader.js" as="script">
 <link rel="preload" nonce="{{nonce}}" href="//privacy-proxy.usercentrics.eu/latest/uc-block.bundle.js" as="script">
-<script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="AcMHYQUX2Y80Au" async></script>
-<script type="application/javascript" src="https://privacy-proxy.usercentrics.eu/latest/uc-block.bundle.js"></script>
+<script justification="Add Usercentrics script" id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="AcMHYQUX2Y80Au" async></script>
+<script justification="Add Usercentrics script" type="application/javascript" src="https://privacy-proxy.usercentrics.eu/latest/uc-block.bundle.js"></script>
 <script justification="Add Usercentrics script">
 // reload page on opt-in
 uc.reloadOnOptIn( [
